Fix example - invisible 2nd list

--- a/examples/src/app.module.css
+++ b/examples/src/app.module.css
@@ -67,6 +67,7 @@ h5 {
 .complexListContainer {
   width: 100%;
   height: 180px;
+  min-height: 180px;
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
 }
